fraud-detection/deploy-fraud-demo.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: demo-application
  annotations: {}
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
        autoscaling.knative.dev/max-scale: "1"
        autoscaling.knative.dev/metric: concurrency
        autoscaling.knative.dev/min-scale: "1"
        autoscaling.knative.dev/target: "1"
    spec:
      serviceAccountName: demo-application-sa
      containers:
        - name: flask
          image: "quay.io/ajshedivy/demo-fraud-application@sha256:144671279239fa12863098153bdb22332ac316c94ee2765acde616bd0b109ddb"
          imagePullPolicy: IfNotPresent
          securityContext:
              allowPrivilegeEscalation: false
              capabilities:
                drop:
                - ALL
              readOnlyRootFilesystem: false
              runAsNonRoot: false
              seccompProfile:
                type: RuntimeDefault
          resources:
              limits:
                cpu: "1"
                memory: 1Gi
              requests:
                cpu: 100m
                memory: 100Mi
          ports:
            - containerPort: 8888
              name: http1
              protocol: TCP
          readinessProbe:
              failureThreshold: 3
              httpGet:
                path: /
                port: 8888
                scheme: HTTP
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
