fraud-detection/fraud-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-app-service
spec:
  selector:
    app: fraud-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
